force-app/main/default/objects/DA_FeedComment__b/DA_FeedComment__b.object-meta.xml
<CustomObject>
    <label>DA Feed Comment</label>
    <pluralLabel>DA Feed Comment</pluralLabel>
</CustomObject>