force-app/main/default/objects/DA_FeedComment__b/fields/S_InsertedById__c.field-meta.xml
<CustomField>
    <fullName>S_InsertedById__c</fullName>
    <label>InsertedBy ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InsertedBy1564630832249</relationshipName>
    <type>Lookup</type>
</CustomField>