force-app/main/default/objects/DA_FeedComment__b/fields/S_LastEditById__c.field-meta.xml
<CustomField>
    <fullName>S_LastEditById__c</fullName>
    <label>Last Edit By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastEditById15646308322481564630832248</relationshipName>
    <type>Lookup</type>
</CustomField>