force-app/main/default/objects/DA_FeedComment__b/fields/S_ParentId__c.field-meta.xml
<CustomField>
    <fullName>S_ParentId__c</fullName>
    <label>Parent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>