force-app/main/default/objects/DA_FeedComment__b/fields/S_RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>S_RelatedRecordId__c</fullName>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>