force-app/main/default/objects/DA_FeedComment__b/fields/S_ThreadLastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>S_ThreadLastUpdatedDate__c</fullName>
    <label>Thread Last Updated Date</label>
    <type>DateTime</type>
</CustomField>